cluster/apps/ai/ollama/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ollama-openwebui
  namespace: ai
  annotations:
    tailscale.com/proxy-group: ollama-proxy
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ollama
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-webui
                port:
                  number: 8080
